Fix counter overflow and abbreviate long numbers Closes #97

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -63,8 +63,9 @@ form {
   }
 
   .stat {
+    @include padding-horiz(0, 0);
     text-align: center;
-    width: 40px;
+    width: 41px;
   }
 
   th {
